--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 git+https://github.com/openai/whisper.git
 soundfile>=0.12
 # Si quieres capturar micrófono en vivo
-pyaudio>=0.2.14
+# pyaudio>=0.2.14
 # --- NLP
 transformers>=4.42
 sentencepiece>=0.2
